--- a/featuremovielist/src/main/res/navigation/movie_list_flow.xml
+++ b/featuremovielist/src/main/res/navigation/movie_list_flow.xml
@@ -16,9 +16,14 @@
         android:id="@+id/movieListFragment"
         android:name="com.example.featuremovielist.MovieListFragment" >
 
+        <argument
+            android:name="movieListData"
+            app:argType="string" />
+
         <deepLink
             android:id="@+id/deepLink"
-            app:uri="example://next" />
+            app:uri="example://featuremovielist/exampleArgs?movieListData={movieListData}" />
+
     </fragment>
 
 </navigation>
