--- a/featuremovielist/src/main/res/navigation/movie_list_flow.xml
+++ b/featuremovielist/src/main/res/navigation/movie_list_flow.xml
@@ -14,7 +14,7 @@
 
     <fragment
         android:id="@+id/movieListFragment"
-        android:name="com.example.featuremovielist.MovieListFragment" >
+        android:name="com.example.featuremovielist.list.MovieListFragment" >
 
         <argument
             android:name="movieListData"
